--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,5 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+baseURL = 'https://phaanpai-site.pages.dev/'
+languageCode = 'th'
+defaultContentLanguage = 'th'
+title = 'PhaanPai'
 theme = "PaperMod"
