--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 baseURL = 'https://phaanpai-site.pages.dev/'
 languageCode = 'th'
 defaultContentLanguage = 'th'
-title = 'PhaanPai Website'
+title = 'ผ่านไป เว็บไซต์'
 theme = "PaperMod"
